# OpenGL

./: .clang-format  .gitmodules  CMakeLists.txt  glfwWindow.cpp  glfwWindow.h  main.cpp
src/: Camera.cpp  Camera.h  Common_defines.h  Core_defines.h  Scene.h  ScenePicker.cpp  ScenePicker.h  Shader.cpp  Shader.h  glfwWindow.cpp  glfwWindow.h  main.cpp  shader.cpp  shader.h  texture.cpp  texture.h
src/Scenes/: Lighting.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RoomOfBoxes.h
src/imgui/: buildImGui.cpp
src/shaders/: fragmentShader.shader  vertexShader.shader
src/shaders/lighting/: 1.colors.fs.shader  1.colors.vs.shader
vender/stb/: stb_image.h
